--- a/app/src/main/res/layout/activity_live_display_new.xml
+++ b/app/src/main/res/layout/activity_live_display_new.xml
@@ -48,8 +48,8 @@
                             android:layout_width="50dp"
                             android:layout_height="13dp"
                             android:layout_marginLeft="6dp"
-                            android:layout_marginRight="6dp"
                             android:layout_marginTop="3dp"
+                            android:layout_marginRight="6dp"
                             android:textSize="11sp" />
 
 
@@ -58,10 +58,10 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentBottom="true"
-                            android:layout_marginBottom="2dp"
                             android:layout_marginLeft="6dp"
-                            android:layout_marginRight="6dp"
                             android:layout_marginTop="6.5dp"
+                            android:layout_marginRight="6dp"
+                            android:layout_marginBottom="2dp"
                             android:singleLine="true"
                             android:textColor="@color/white"
                             android:textSize="10sp" />
@@ -124,27 +124,35 @@
                 android:layout_marginLeft="6dp"
                 android:layout_marginTop="6.5dp">
 
-                <TextView
-                    android:id="@+id/tv_contribute"
+                <RelativeLayout
+                    android:id="@+id/rl_head"
                     android:layout_width="wrap_content"
-                    android:layout_height="20dp"
+                    android:layout_height="25dp"
                     android:layout_centerVertical="true"
-                    android:background="@drawable/shape_live_display_contribution_btn_bg"
-                    android:drawableLeft="@drawable/live_display_cup"
-                    android:drawablePadding="6dp"
-                    android:drawableRight="@drawable/live_display_arrow"
-                    android:gravity="center"
-                    android:paddingLeft="9dp"
-                    android:paddingRight="9dp"
-                    android:textColor="@color/white"
-                    android:textSize="12sp" />
+                    android:background="@drawable/shape_live_display_contribution_btn_bg">
+
+                    <com.whzl.mengbi.ui.widget.view.HeadLineView
+                        android:id="@+id/head_line"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent" />
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="5dp"
+                        android:layout_marginRight="5dp"
+                        android:layout_toRightOf="@id/head_line"
+                        android:src="@drawable/live_display_arrow" />
+                </RelativeLayout>
+
 
                 <RelativeLayout
                     android:id="@+id/rl_guard_number"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="6dp"
-                    android:layout_toRightOf="@id/tv_contribute">
+                    android:layout_toRightOf="@id/rl_head">
 
                     <ImageView
                         android:layout_width="wrap_content"
@@ -183,8 +191,8 @@
                         android:id="@+id/tv_run_way_gift"
                         android:layout_width="1000dp"
                         android:layout_height="20dp"
-                        android:layout_marginBottom="2dp"
                         android:layout_marginLeft="5dp"
+                        android:layout_marginBottom="2dp"
                         android:gravity="center_vertical"
                         android:singleLine="true"
                         android:textSize="12sp" />
@@ -362,10 +370,10 @@
                         android:layout_alignParentBottom="true"
                         android:background="#702d2933"
                         android:gravity="center_vertical"
-                        android:paddingBottom="3dp"
                         android:paddingLeft="7dp"
-                        android:paddingRight="7dp"
                         android:paddingTop="2dp"
+                        android:paddingRight="7dp"
+                        android:paddingBottom="3dp"
                         android:singleLine="true"
                         android:textSize="12sp"
                         android:visibility="gone" />
@@ -407,10 +415,10 @@
                         android:id="@+id/cl_entenr"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:paddingBottom="4dp"
                         android:paddingLeft="10dp"
+                        android:paddingTop="3dp"
                         android:paddingRight="10dp"
-                        android:paddingTop="3dp">
+                        android:paddingBottom="4dp">
 
                         <com.whzl.mengbi.ui.widget.view.RoyalEnterView
                             android:id="@+id/tv_enter"
@@ -459,8 +467,8 @@
                     android:layout_width="60dp"
                     android:layout_height="60dp"
                     android:layout_alignParentRight="true"
-                    android:layout_marginRight="7dp"
-                    android:layout_marginTop="9dp">
+                    android:layout_marginTop="9dp"
+                    android:layout_marginRight="7dp">
 
 
                 </com.youth.banner.Banner>
@@ -468,10 +476,10 @@
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
                     android:layout_alignParentRight="true"
-                    android:layout_marginBottom="5dp"
+                    android:layout_alignParentBottom="true"
                     android:layout_marginRight="7dp"
+                    android:layout_marginBottom="5dp"
                     android:gravity="center_horizontal"
                     android:orientation="vertical">
 
@@ -531,10 +539,10 @@
                 android:id="@+id/view_message_notify"
                 android:layout_width="6dp"
                 android:layout_height="6dp"
-                android:layout_alignRight="@id/btn_chat_private"
                 android:layout_alignTop="@id/btn_chat_private"
-                android:layout_marginRight="2dp"
+                android:layout_alignRight="@id/btn_chat_private"
                 android:layout_marginTop="2dp"
+                android:layout_marginRight="2dp"
                 android:background="@drawable/shape_red_notify"
                 android:visibility="gone" />
 
