--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -358,6 +358,15 @@
         <item name="tabSelectedTextColor">#ffd634</item>
     </style>
 
+    <style name="HeadTabLayout" parent="Widget.Design.TabLayout">
+        <item name="tabIndicatorHeight">2dp</item>
+        <item name="tabBackground">@color/white2</item>
+        <item name="tabIndicatorColor">#ffd634</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:textColor">#000000</item>
+        <item name="tabSelectedTextColor">#000000</item>
+    </style>
+
     <style name="FollowTab" parent="Widget.Design.TabLayout">
         <item name="tabIndicatorColor">#fed634</item>
         <item name="tabIndicatorHeight">2.5dp</item>
