--- a/app/src/main/res/layout/fragment_follow_main.xml
+++ b/app/src/main/res/layout/fragment_follow_main.xml
@@ -14,10 +14,27 @@
         android:layout_width="match_parent"
         android:layout_height="0.3dp" />
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/vp_follow"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/white"
-        android:overScrollMode="never" />
+        android:background="@color/white">
+
+        <android.support.v4.view.ViewPager
+            android:id="@+id/vp_follow"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:overScrollMode="never" />
+
+        <ImageButton
+            android:id="@+id/ib_clear"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginBottom="29dp"
+            android:layout_marginRight="11.5dp"
+            android:background="@null"
+            android:src="@drawable/ic_clear_follow"
+            android:visibility="gone" />
+    </RelativeLayout>
 </LinearLayout>
