--- a/app/src/main/res/layout/dialog_head_line.xml
+++ b/app/src/main/res/layout/dialog_head_line.xml
@@ -20,14 +20,15 @@
             style="@style/HeadTabLayout"
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:layout_marginTop="18dp"
+            android:layout_marginTop="12dp"
             app:tabGravity="fill"
             app:tabMode="scrollable" />
 
         <android.support.v4.view.ViewPager
             android:id="@+id/viewpager"
             android:layout_width="match_parent"
-            android:layout_height="400dp" />
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
     </LinearLayout>
 
 </RelativeLayout>
