--- a/app/src/main/res/layout/item_audience_contribuate.xml
+++ b/app/src/main/res/layout/item_audience_contribuate.xml
@@ -1,45 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="62dp">
+    android:layout_height="60dp">
 
-    <TextView
-        android:id="@+id/iv_rank"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="15dp"
-        android:gravity="center"
-        android:textSize="14sp"
-        android:textColor="#909090" />
+    <RelativeLayout
+        android:id="@+id/rl_rank"
+        android:layout_width="50dp"
+        android:layout_height="match_parent">
+
+        <TextView
+            android:id="@+id/tv_rank"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_marginLeft="15dp"
+            android:textSize="15sp"
+            android:textStyle="bold"
+            android:textColor="@color/black" />
+    </RelativeLayout>
 
     <com.whzl.mengbi.ui.widget.view.CircleImageView
         android:id="@+id/iv_avatar"
-        android:layout_width="44dp"
-        android:layout_height="44dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_centerVertical="true"
-        android:layout_marginLeft="6.5dp"
-        android:layout_marginStart="48dp" />
+        android:layout_toRightOf="@id/rl_rank" />
 
     <TextView
         android:id="@+id/tv_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="15dp"
+        android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
         android:layout_toRightOf="@id/iv_avatar"
-        android:textColor="#323232"
-        android:textSize="15sp" />
+        android:singleLine="true"
+        android:textColor="@color/black"
+        android:textSize="12sp"
+        android:textStyle="bold"  />
 
     <ImageView
         android:id="@+id/iv_level_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/tv_name"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="3dp"
-        android:layout_toRightOf="@id/iv_avatar"
-        android:gravity="center_vertical" />
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="5dp"
+        android:layout_toRightOf="@id/iv_avatar" />
 
     <TextView
         android:id="@+id/tv_amount"
@@ -47,9 +53,9 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
-        android:layout_marginRight="22.5dp"
-        android:textColor="#f1275b"
-        android:textSize="16sp"
-        android:textStyle="bold" />
+        android:layout_marginRight="10dp"
+        android:singleLine="true"
+        android:textColor="@color/tran_black2"
+        android:textSize="10sp"/>
 
 </RelativeLayout>
