--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -360,10 +360,11 @@
 
     <style name="HeadTabLayout" parent="Widget.Design.TabLayout">
         <item name="tabIndicatorHeight">2dp</item>
-        <item name="tabBackground">@color/white2</item>
+        <item name="tabBackground">@color/white</item>
         <item name="tabIndicatorColor">#ffd634</item>
         <item name="android:textSize">15sp</item>
         <item name="android:textColor">#000000</item>
+        <item name="android:textStyle">bold</item>
         <item name="tabSelectedTextColor">#000000</item>
     </style>
 
