--- a/app/src/main/res/layout/activity_live_display_new.xml
+++ b/app/src/main/res/layout/activity_live_display_new.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/live_draw_layout"
+    android:id="@+id/draw_layout_out_live"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -664,5 +664,6 @@
 
     <!--</LinearLayout>-->
     <include
+        android:id="@+id/draw_layout_include_live"
         layout="@layout/draw_layout_live" />
 </android.support.v4.widget.DrawerLayout>
