--- a/app/src/main/res/drawable/bg_live_pack_num.xml
+++ b/app/src/main/res/drawable/bg_live_pack_num.xml
@@ -4,5 +4,10 @@
 
 
     <solid android:color="#ff2b3f" />
-    <corners android:radius="4dp" />
+    <corners android:radius="5dp" />
+    <padding
+        android:bottom="2dp"
+        android:left="1.5dp"
+        android:right="1.5dp"
+        android:top="2dp" />
 </shape>
