--- a/app/src/main/res/layout/draw_layout_live.xml
+++ b/app/src/main/res/layout/draw_layout_live.xml
@@ -12,13 +12,39 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
-    <Switch
-        android:id="@+id/switch_voice_draw_layout_live"
-        android:layout_width="wrap_content"
-        android:layout_height="18dp"
-        android:switchMinWidth="38.5dp"
-        android:textOff=""
-        android:textOn=""
-        android:thumb="@drawable/switch_thumb_live"
-        android:track="@drawable/switch_draw_layout" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:paddingLeft="12.5dp"
+        android:paddingRight="12.5dp">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="PK时对方声音"
+            android:textColor="#70ffffff"
+            android:textSize="12sp" />
+
+        <Switch
+            android:id="@+id/switch_voice_draw_layout_live"
+            android:layout_width="wrap_content"
+            android:layout_height="18dp"
+            android:switchMinWidth="38.5dp"
+            android:textOff=""
+            android:textOn=""
+            android:thumb="@drawable/switch_thumb_live"
+            android:track="@drawable/switch_draw_layout" />
+    </LinearLayout>
+
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_tips_draw_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp" />
+
 </LinearLayout>
