--- a/app/src/main/res/layout/item_tips_draw_layout.xml
+++ b/app/src/main/res/layout/item_tips_draw_layout.xml
@@ -2,22 +2,20 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="6dp"
+    android:layout_marginTop="5dp"
     android:gravity="center"
     android:orientation="vertical">
 
     <ImageView
-        android:id="@+id/iv_activity"
-        android:layout_width="43dp"
-        android:layout_height="43dp"
-        android:scaleType="fitXY" />
+        android:id="@+id/iv_tips_draw_layout"
+        android:layout_width="17.5dp"
+        android:layout_height="17.5dp" />
 
     <TextView
-        android:id="@+id/tv_activity"
-        android:layout_width="match_parent"
+        android:id="@+id/tv_tips_draw_layout"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="6.5dp"
-        android:gravity="center"
         android:textColor="#40ffffff"
         android:textSize="9sp" />
 </LinearLayout>
