--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -220,4 +220,6 @@
 
     <color name="text_color_no_add_super_run">#30ffffff</color>
     <color name="text_color_ok_add_super_run">#ffeb00</color>
+
+    <color name="week_star_blue">#4295ff</color>
 </resources>
