--- a/app/src/main/res/layout/head_home.xml
+++ b/app/src/main/res/layout/head_home.xml
@@ -28,6 +28,23 @@
             app:layout_constraintLeft_toRightOf="parent" />
 
     </android.support.constraint.ConstraintLayout>
+    
+    <RelativeLayout
+        android:id="@+id/rl_top_three"
+        android:layout_width="match_parent"
+        android:layout_height="52dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/bg_headline">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_top_three"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"/>
+
+    </RelativeLayout>
 
     <TextView
         android:layout_width="match_parent"
