--- a/app/src/main/res/layout/item_manager.xml
+++ b/app/src/main/res/layout/item_manager.xml
@@ -13,7 +13,7 @@
     <LinearLayout
         android:id="@+id/ll_name"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="20dp"
         android:layout_marginLeft="15dp"
         android:layout_marginTop="10dp"
         android:layout_toRightOf="@id/iv_avatar"
@@ -23,6 +23,7 @@
             android:id="@+id/ll_manager_container"
             android:layout_width="wrap_content"
             android:layout_height="20dp"
+            android:gravity="center_vertical"
             android:orientation="horizontal" />
 
         <com.whzl.mengbi.ui.widget.view.PrettyNumText
@@ -30,15 +31,18 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_marginLeft="3dp"/>
+            android:layout_marginLeft="3dp"
+            android:visibility="gone"/>
 
         <TextView
             android:id="@+id/tv_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:singleLine="true"
             android:textColor="@color/white"
             android:layout_marginLeft="3dp"
-            android:textSize="12sp" />
+            android:textSize="15sp" />
     </LinearLayout>
 
 
@@ -50,15 +54,17 @@
         android:layout_marginLeft="15dp"
         android:layout_toRightOf="@id/iv_avatar"
         android:gravity="center_vertical"
+        android:layout_marginTop="5dp"
         android:orientation="horizontal" />
 
     <ImageView
         android:id="@+id/iv_car"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="97dp"
+        android:layout_height="45dp"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
-        android:layout_marginRight="10dp" />
+        android:layout_marginRight="10dp"
+        android:visibility="gone"/>
 
     <View
         android:layout_width="match_parent"
