--- a/app/src/main/res/layout/include_headline.xml
+++ b/app/src/main/res/layout/include_headline.xml
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/tran_grey3"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -18,8 +24,8 @@
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:textColor="@color/black"
-                android:textSize="15sp"
-                android:text="1"
+                android:textSize="9sp"
+                android:text="未上榜"
                 android:textStyle="bold" />
 
         </RelativeLayout>
@@ -43,7 +49,7 @@
             android:textColor="@color/black"
             android:textSize="12sp"
             android:textStyle="bold"
-            android:text="@string/tip_off_2"/>
+            android:text="昵称"/>
 
         <TextView
             android:id="@+id/tv_need_value"
@@ -87,4 +93,4 @@
 
     </RelativeLayout>
 
-</RelativeLayout>
+</LinearLayout>
