--- a/app/src/main/res/layout/head_week_star.xml
+++ b/app/src/main/res/layout/head_week_star.xml
@@ -18,7 +18,7 @@
     </RelativeLayout>
 
     <ImageView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginLeft="5dp"
@@ -34,7 +34,7 @@
         android:nestedScrollingEnabled="false"/>
 
     <ImageView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginLeft="5dp"
