--- a/app/src/main/res/layout/dialog_head_line.xml
+++ b/app/src/main/res/layout/dialog_head_line.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:gravity="center_horizontal"
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="550dp"
         android:orientation="vertical"
         android:layout_marginLeft="23dp"
         android:layout_marginRight="23dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginBottom="50dp"
-        android:layout_centerInParent="true"
         android:background="@drawable/shape_dialog_update_bg">
 
         <com.whzl.mengbi.ui.widget.tablayout.TabLayout
@@ -31,4 +30,4 @@
             android:layout_weight="1"/>
     </LinearLayout>
 
-</RelativeLayout>
+</LinearLayout>
