--- a/app/src/main/res/layout/activity_live_display_new.xml
+++ b/app/src/main/res/layout/activity_live_display_new.xml
@@ -276,17 +276,10 @@
 
                     </LinearLayout>
 
-                    <!--<ProgressBar-->
-                    <!--android:id="@+id/progressbar"-->
-                    <!--android:layout_width="50dp"-->
-                    <!--android:layout_height="50dp"-->
-                    <!--android:layout_centerInParent="true" />-->
-
-                    <com.whzl.mengbi.ui.widget.loading.AVLoadingIndicatorView
+                    <ProgressBar
                         android:id="@+id/progressbar"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        style="@style/AVLoadingIndicatorView"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
                         android:layout_centerInParent="true" />
 
                     <TextView
