--- a/app/src/main/res/layout/fragment_headline_list.xml
+++ b/app/src/main/res/layout/fragment_headline_list.xml
@@ -20,10 +20,38 @@
         android:layout_weight="1"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp">
+
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_headline"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
+
+        <RelativeLayout
+            android:id="@+id/rl_empty"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_centerInParent="true"
+            android:gravity="center_horizontal"
+            android:visibility="gone">
+
+            <ImageView
+                android:id="@+id/iv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:src="@drawable/img_empty_follow" />
+
+            <TextView
+                android:id="@+id/tv_empty"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/iv"
+                android:layout_centerHorizontal="true"
+                android:text="当前列表为空"
+                android:textColor="#c5c5c5"
+                android:textSize="12sp"
+                android:visibility="visible" />
+        </RelativeLayout>
     </RelativeLayout>
 
     <RelativeLayout
