--- a/app/src/main/res/layout/activity_live_display_new.xml
+++ b/app/src/main/res/layout/activity_live_display_new.xml
@@ -53,8 +53,8 @@
                                 android:layout_width="50dp"
                                 android:layout_height="13dp"
                                 android:layout_marginLeft="6dp"
-                                android:layout_marginTop="3dp"
                                 android:layout_marginRight="6dp"
+                                android:layout_marginTop="3dp"
                                 android:textSize="11sp" />
 
 
@@ -63,10 +63,10 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_alignParentBottom="true"
-                                android:layout_marginLeft="6dp"
-                                android:layout_marginTop="6.5dp"
-                                android:layout_marginRight="6dp"
                                 android:layout_marginBottom="2dp"
+                                android:layout_marginLeft="6dp"
+                                android:layout_marginRight="6dp"
+                                android:layout_marginTop="6.5dp"
                                 android:singleLine="true"
                                 android:textColor="@color/white"
                                 android:textSize="10sp" />
@@ -196,8 +196,8 @@
                             android:id="@+id/tv_run_way_gift"
                             android:layout_width="1000dp"
                             android:layout_height="20dp"
-                            android:layout_marginLeft="5dp"
                             android:layout_marginBottom="2dp"
+                            android:layout_marginLeft="5dp"
                             android:gravity="center_vertical"
                             android:singleLine="true"
                             android:textSize="12sp" />
@@ -367,9 +367,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_alignParentBottom="true"
+                        android:layout_marginBottom="10dp"
                         android:layout_marginLeft="20dp"
                         android:layout_marginRight="20dp"
-                        android:layout_marginBottom="10dp"
                         android:visibility="gone" />
 
                     <android.support.design.widget.CoordinatorLayout
@@ -385,10 +385,10 @@
                             android:layout_alignParentBottom="true"
                             android:background="#702d2933"
                             android:gravity="center_vertical"
-                            android:paddingLeft="7dp"
-                            android:paddingTop="2dp"
-                            android:paddingRight="7dp"
                             android:paddingBottom="3dp"
+                            android:paddingLeft="7dp"
+                            android:paddingRight="7dp"
+                            android:paddingTop="2dp"
                             android:singleLine="true"
                             android:textSize="12sp"
                             android:visibility="gone" />
@@ -430,10 +430,10 @@
                             android:id="@+id/cl_entenr"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:paddingBottom="4dp"
                             android:paddingLeft="10dp"
-                            android:paddingTop="3dp"
                             android:paddingRight="10dp"
-                            android:paddingBottom="4dp">
+                            android:paddingTop="3dp">
 
                             <com.whzl.mengbi.ui.widget.view.RoyalEnterView
                                 android:id="@+id/tv_enter"
@@ -482,8 +482,8 @@
                         android:layout_width="60dp"
                         android:layout_height="60dp"
                         android:layout_alignParentRight="true"
-                        android:layout_marginTop="9dp"
-                        android:layout_marginRight="7dp">
+                        android:layout_marginRight="7dp"
+                        android:layout_marginTop="9dp">
 
 
                     </com.youth.banner.Banner>
@@ -491,10 +491,10 @@
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_alignParentRight="true"
                         android:layout_alignParentBottom="true"
-                        android:layout_marginRight="7dp"
+                        android:layout_alignParentRight="true"
                         android:layout_marginBottom="5dp"
+                        android:layout_marginRight="7dp"
                         android:gravity="center_horizontal"
                         android:orientation="vertical">
 
@@ -554,10 +554,10 @@
                     android:id="@+id/view_message_notify"
                     android:layout_width="6dp"
                     android:layout_height="6dp"
-                    android:layout_alignTop="@id/btn_chat_private"
                     android:layout_alignRight="@id/btn_chat_private"
-                    android:layout_marginTop="2dp"
+                    android:layout_alignTop="@id/btn_chat_private"
                     android:layout_marginRight="2dp"
+                    android:layout_marginTop="2dp"
                     android:background="@drawable/shape_red_notify"
                     android:visibility="gone" />
 
@@ -629,14 +629,6 @@
 
     </RelativeLayout>
 
-    <!--<LinearLayout-->
-    <!--android:layout_width="236.5dp"-->
-    <!--android:layout_height="match_parent"-->
-    <!--android:layout_gravity="end"-->
-    <!--android:background="#000000"-->
-    <!--android:orientation="vertical">-->
-
-    <!--</LinearLayout>-->
     <include
         android:id="@+id/draw_layout_include_live"
         layout="@layout/draw_layout_live" />
