--- a/app/src/main/res/layout/comm_white_toolbar.xml
+++ b/app/src/main/res/layout/comm_white_toolbar.xml
@@ -25,7 +25,7 @@
         android:layout_gravity="right"
         android:layout_marginRight="17dp"
         android:gravity="center"
-        android:textColor="#F0F0F0"
+        android:textColor="#b9b9b9"
         android:textSize="15sp" />
 
 
